[package]
name = "bulk_format"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
derive_more = "0.99.17"
owo-colors = "4.0.0"
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
